--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -31,12 +31,12 @@ services:
   frontend:
     image: public.ecr.aws/j3o8b4k0/jenkins-react-image:latest
     container_name: todo_frontend
-    env_file:
-      - .env
+    environment:
+      REACT_APP_BASE_URL: http://100.28.216.69:5000/
     ports:
       - 3000:3000
     depends_on:
-      - nodejs
+      - backend
     command: bash -c "npm install && npm start"
       
 volumes:
